[tool.poetry]
name = "hyh-blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Kevin Houlihan <kevin@crimsoncookie.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.dev0"
pelican = {extras = ["markdown"], version = "^4.6.0"}
typogrify = "^2.0.7"
pelican-embed-svg = "^0.0.3"
css-html-js-minify = "^2.5.5"
beautifulsoup4 = "^4.8.2"
lxml = "^5"
Pillow = "^8.3.2"
Markdown = "^3.3.4"
Pygments = "^2.9.0"
pelican-optimise-images = {git = "https://github.com/khoulihan/pelican-optimise-images.git", rev = "main"}
numpy = "1.23.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
